<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:id="@+id/Linearlayout"
    tools:context=".MainActivity">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/rounded_corner"
        android:elevation="20dp"
        android:padding="36dp"
        android:text="@string/lgbtq"
        android:textColor="@color/white"
        android:textSize="40sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/button1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="36dp"
        android:text="@string/lesbian"
        android:elevation="20dp"
        tools:ignore="VisualLintButtonSize" />

    <Button
        android:id="@+id/button2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="36dp"
        android:text="@string/gay"
        tools:ignore="VisualLintButtonSize" />

    <Button
        android:id="@+id/button3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="36dp"
        android:text="@string/bisexual"
        tools:ignore="VisualLintButtonSize" />

    <Button
        android:id="@+id/button4"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="36dp"
        android:text="@string/transgender"
        tools:ignore="VisualLintButtonSize" />

    <Button
        android:id="@+id/button5"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="36dp"
        android:text="@string/queer"
        tools:ignore="VisualLintButtonSize" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="36dp"
        android:padding="10dp"
        android:background="@drawable/btn"
        android:id="@+id/Linearlayout1"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/textView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/Additional"
            android:textColor="@color/white"
            android:textSize="20sp"
            tools:ignore="TextSizeCheck" />

        <EditText
            android:id="@+id/editTextText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:autofillHints=""
            android:ems="10"
            android:hint="@string/app_name"
            android:inputType="text"
            android:text=""
            android:textColor="@color/white"
            android:textColorHint="@color/gray"
            tools:ignore="LabelFor,TouchTargetSizeCheck,VisualLintTextFieldSize" />

        <Button
            android:id="@+id/button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/go"
            tools:ignore="VisualLintButtonSize,VisualLintBounds" />
    </LinearLayout>

</LinearLayout>